# vulnscan

./: .gitignore  BUILDING.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README_zh.md  SECURITY.md  main.py  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  test.yml
docs/: USER_GUIDE.md  USER_GUIDE_zh.md
tests/: conftest.py  test_builtin_scanners.py  test_cli.py  test_engine.py  test_external_scanners.py  test_gui.py  test_i18n.py  test_integration.py  test_integrity.py  test_models.py  test_report.py  test_scanners.py  test_utils.py
vulnscan/: __init__.py  cli.py  engine.py  gui.py  i18n.py  integrity.py  models.py  registry.py  report.py  utils.py
vulnscan/data/: common_ports.json  report_template.html  sensitive_paths.txt  vuln_patterns.json
vulnscan/locale/: __init__.py  messages.py
vulnscan/scanners/: base.py
vulnscan/scanners/builtin/: dependency_scanner.py  directory_scanner.py  file_analyzer.py  header_scanner.py  info_leak_scanner.py  port_scanner.py  ssl_scanner.py
