[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vulnscan"
version = "1.0.1"
description = "Integrated vulnerability scanner with CLI and GUI"
requires-python = ">=3.10"
authors = [{name = "白白LOVE尹尹", email = "bbyybb@users.noreply.github.com"}]
dependencies = [
    "requests>=2.28.0",
    "jinja2>=3.1.0",
    "rich>=13.0.0",
    "Pillow>=9.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=7.1.0"]

[project.scripts]
vulnscan = "vulnscan.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: integration tests (may be slower, use -m integration to select)",
]
